<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_wifi"
        android:summary="@string/pref_wifi_text"
        android:title="@string/pref_wifi_title" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/tab_main"
        android:entryValues="@array/pref_position_value"
        android:key="pref_position"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_position_title"
        android:summary="@string/pref_position_text" />


    <SwitchPreference
        android:defaultValue="false"
        android:key="reproductor_externo"
        android:title="@string/pref_reproductor_externo_title"
        android:summary="@string/pref_reproductor_externo_text" />

    <Preference
        android:title="@string/pref_borrar_descargas_title"
        android:key="borrar_descargas"
        android:summary="@string/pref_borrar_descargas_text"/>
    <Preference
        android:title="@string/pref_actualizar_datos_title"
        android:key="actualizar_datos"
        android:summary="@string/pref_actualizar_datos_text"/>

    <!-- TODO: Añadir opción para eliminar todas las subscripciones -->

</PreferenceScreen>
