<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="es.usal.podcast.MainActivity">

    <item android:id="@+id/search"
        android:title="@string/menu_buscar"
        android:icon="@drawable/ic_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/action_podcast"
        android:orderInCategory="100"
        android:title="@string/menu_podcast"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mi_perfil"
        android:orderInCategory="100"
        android:title="@string/menu_miperfil"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_cerrar_sesion"
        android:orderInCategory="100"
        android:title="@string/menu_cerrarsesion"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_opciones"
        app:showAsAction="never" />
</menu>
